2014-01-13  Daniel Bates  <dabates@apple.com>

        [iOS] More build fixes for WebKit

        Add iOS-specific logic to build phases: "Symlink WebKitPluginHost in to place" and "Migrate Headers".

        * WebKit.xcodeproj/project.pbxproj:

2014-01-13  Daniel Bates  <dabates@apple.com>

        [iOS] Fix up WebKit build phases

        Add iOS-specific logic to build phrases "Generate 64-bit Export File" and "Migrate Headers".

        * WebKit.xcodeproj/project.pbxproj:

2014-01-13  Daniel Bates  <dabates@apple.com>

        [iOS] Don't link to Mac-only frameworks when building WebKit

        Currently the Xcode project always links against various Mac-only frameworks (e.g. Carbon.framework).
        Instead the Xcode project should only link against {JavaScriptCore, WebCore}.framework and
        libicucore.dylib, which are the frameworks/libraries that are shared by both the Mac and iOS port. We'll
        use Configuration/WebCore.xcconfig to specify additional port-specific frameworks to link against.

        * WebKit.xcodeproj/project.pbxproj:

2014-01-13  Eric Carlson  <eric.carlson@apple.com>

        Unreviewed build fix.

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in: Add missing
            exports needed for Windows build after r161899.

2014-01-13  Andy Estes  <aestes@apple.com>

        [iOS] Build Fix: switch back to calling postprocess-headers.sh

        * WebKit.xcodeproj/project.pbxproj:

2014-01-12  Dan Bernstein  <mitz@apple.com>

        Try to fix the Windows build after r161852.

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:

2014-01-10  Daniel Bates  <dabates@apple.com>

        [iOS] Upstream WebCore and Tools miscellaneous changes
        https://bugs.webkit.org/show_bug.cgi?id=126698

        Reviewed by David Kilzer.

        * WebKit.xcodeproj/project.pbxproj:

2014-01-09  Benjamin Poulain  <bpoulain@apple.com>

        Remove the WebKit layer of the Blackberry port